<resources>
    <string name="app_name">DaDaBike</string>
    <string name="input_your_phone">input_your_phone</string>
    <string name="sign_up">sign_up</string>
    <string name="login">login</string>
    <string name="input_your_psw">input_your_password</string>
    <string name="sweep_code_unlock">sweep_code_unlock</string>
    <string name="input_money">input_money</string>
    <string name="bike_list">BikeList</string>
    <string name="bike_num">BikeNumber</string>
    <string name="bike_num1">BikeNumber:</string>
    <string name="bike_date">UseBikeDate</string>
    <string name="use_bike_time">UseBikeTime</string>
    <string name="billing_standard">Car Rental Fee Rules: Car Rental Fees = Car Rental Duration (Half Hours) * 1/Yuan</string>
    <string name="go_to_navigation">Go to navigation</string>
    <string name="returning_the_car">Returning the car</string>
    <string name="want_recharge">Recharge</string>
    <string name="twenty_yuan">20yuan</string>
    <string name="fifty_yuan">50yuan</string>
    <string name="hundred_yuan">100yuan</string>
    <string name="determine_recharge">Determine Recharge</string>
    <string name="refresh">refresh</string>
    <string name="balance">Balance:</string>
    <string name="recharge">recharge</string>
    <string name="deposit_payment">Deposit Payment</string>
    <string name="stroke">Stroke</string>
    <string name="customer_service">Customer Service</string>
    <string name="setting">Setting</string>
    <string name="starting_point">Starting Point</string>
    <string name="end_point">End Point</string>
    <string name="riding_time">Riding Time：</string>
    <string name="new_user_click_to_register">new user? Click to register</string>
    <string name="sign_out">sign out</string>
    <string name="found_bike_failure">Found Bike Failure</string>
    <string name="deposit_description">Deposit Description</string>
    <string name="recharge_instructions">Recharge Instructions</string>
    <string name="report_violation">Report Violation</string>
    <string name="no_travel_record">There is no travel record yet.</string>
    <string name="please_login">Please Login</string>
    <string name="go_to_login">Login</string>
</resources>
