<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayD"
    android:orientation="vertical"
    tools:context=".activity.IndexActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/bike_list"
        android:textColor="@color/grayFSix"
        android:textSize="16sp" />

    <include layout="@layout/item_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/bike_num"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grayD" />

        <TextView
            android:id="@+id/tv_car_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="0000"
            android:textColor="@color/blackThree"
            android:textSize="16sp" />

    </LinearLayout>

    <include layout="@layout/item_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/bike_date"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grayD" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="2019-1-1"
            android:textColor="@color/blackThree"
            android:textSize="16sp" />

    </LinearLayout>

    <include layout="@layout/item_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/use_bike_time"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grayD" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="00"
                android:textColor="@color/blackThree"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text=" : "
                android:textColor="@color/blackThree"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_minute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="00"
                android:textColor="@color/blackThree"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text=" : "
                android:textColor="@color/blackThree"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_sconed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="00"
                android:textColor="@color/blackThree"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>

    <include layout="@layout/item_line" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingStart="12dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/billing_standard"
        android:textColor="@color/grayFSix"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/shape_sign_up_button_pre"
        android:text="@string/go_to_navigation"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_return_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/shape_sign_up_button_pre"
        android:text="@string/returning_the_car"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>