<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayD"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_my"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_bg"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingTop="56dp"
            android:paddingEnd="16dp"
            android:paddingBottom="56dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/avatar"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="xxxx"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_refuse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_white"
                android:paddingStart="16dp"
                android:paddingTop="6dp"
                android:paddingEnd="16dp"
                android:paddingBottom="6dp"
                android:text="@string/refresh"
                android:textColor="@color/blackThree"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/shape_white"
            android:gravity="center_vertical"
            android:padding="26dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="0元"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <Button
                    android:id="@+id/btn_add_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_sign_up_button"
                    android:text="@string/recharge"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>


        </LinearLayout>
    </FrameLayout>


    <LinearLayout
        android:id="@+id/ll_trip_and_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/shape_white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_deposit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingTop="20dp"
            android:paddingEnd="12dp"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/iv_deposit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/deposit" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/deposit_payment"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="已缴纳"
                android:textSize="12sp"
                android:textColor="@color/redE"
                android:layout_marginEnd="8dp"
                android:visibility="gone"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/go" />

        </LinearLayout>

        <include layout="@layout/item_line" />

        <LinearLayout
            android:id="@+id/ll_trip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingTop="20dp"
            android:paddingEnd="12dp"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/iv_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/trip" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/stroke"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/go" />
        </LinearLayout>

        <include layout="@layout/item_line" />

        <LinearLayout
            android:id="@+id/ll_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingTop="20dp"
            android:paddingEnd="12dp"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/iv_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/service" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/customer_service"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/go" />

        </LinearLayout>

        <include layout="@layout/item_line" />

        <LinearLayout
            android:id="@+id/ll_set_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingTop="20dp"
            android:paddingEnd="12dp"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/iv_set_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/setup" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/setting"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/go" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_no_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="12dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/please_login"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_sign_up_button"
            android:text="@string/go_to_login"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>