<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="12dp"
    android:background="@drawable/shape_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:singleLine="true"
            android:text="2019-1-1"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/bike_num1"
            android:textColor="@color/blackThree"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_bike_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            android:text="bikenum"
            android:textColor="@color/grayFSix"
            android:textSize="14sp" />
    </LinearLayout>

    <include layout="@layout/item_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_start"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/start" />

        <TextView
            android:id="@+id/tv_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:singleLine="false"
            android:text="@string/starting_point"
            android:textColor="@color/blackThree"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:id="@+id/view_line"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/end" />

        <TextView
            android:id="@+id/tv_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:singleLine="false"
            android:text="@string/end_point"
            android:textColor="@color/blackThree"
            android:textSize="16sp" />
    </LinearLayout>

    <include layout="@layout/item_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:gravity="end"
            android:padding="10dp"
            android:text="@string/riding_time"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:gravity="end"
            android:padding="10dp"
            android:text="00:00"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/tv_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:gravity="end"
            android:padding="10dp"
            android:text="100"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>



</LinearLayout>